--- a/aggregator/Cargo.toml
+++ b/aggregator/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cached = "0.43"
+async-trait = "0.1"
 futures = "0.3"
+graphql_client = "0.12"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
