--- a/aggregator/Cargo.toml
+++ b/aggregator/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 async-trait = "0.1"
 futures = "0.3"
 graphql_client = "0.12"
+mongodb = "2.5"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
