--- a/aggregator/Cargo.toml
+++ b/aggregator/Cargo.toml
@@ -13,5 +13,5 @@ mongodb = "2.5"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_yaml = "0.9"
 tokio = { version = "1.0", features = ["full"] }
+toml = "0.7.3"
