--- a/aggregator/Cargo.toml
+++ b/aggregator/Cargo.toml
@@ -13,7 +13,7 @@ futures = "0.3"
 graphql_client = "0.12"
 mongodb = "2.5"
 redis = { version = "0.23.0", features = ["tokio-comp", "json"] }
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
