--- a/aggregator/Cargo.toml
+++ b/aggregator/Cargo.toml
@@ -11,9 +11,11 @@ bson = { version = "2.6", features = ["chrono-0_4"] }
 chrono = "0.4"
 futures = "0.3"
 graphql_client = "0.12"
+headless_chrome = "1.0"
 mongodb = "2.5"
 redis = { version = "0.23.0", features = ["tokio-comp", "json"] }
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
+scraper = "0.16.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
