--- a/aggregator/Cargo.toml
+++ b/aggregator/Cargo.toml
@@ -12,7 +12,7 @@ futures = "0.3"
 graphql_client = "0.12"
 headless_chrome = "1.0"
 mongodb = "2.5"
-redis = { version = "0.23.0", features = ["tokio-comp", "json"] }
+redis = { version = "0.23.0", features = ["tokio-comp", "connection-manager"] }
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 scraper = "0.16.0"
 serde = { version = "1.0", features = ["derive"] }
