Flip logic for merge to improve results.

--- a/aggregator/Cargo.toml
+++ b/aggregator/Cargo.toml
@@ -13,6 +13,7 @@ graphql_client = "0.12"
 headless_chrome = "1.0"
 mongodb = "2.5"
 redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
+regex = "1.8"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 scraper = "0.16"
 serde = { version = "1.0", features = ["derive"] }
