--- a/aggregator/Cargo.toml
+++ b/aggregator/Cargo.toml
@@ -18,7 +18,6 @@ reqwest = { version = "0.11", default-features = false, features = ["json", "rus
 scraper = "0.16"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tantivy = "0.19"
-tempfile = "3.5"
+strsim = "0.10"
 tokio = { version = "1.0", features = ["full"] }
 toml = "0.7"
