--- a/aggregator/Cargo.toml
+++ b/aggregator/Cargo.toml
@@ -19,5 +19,6 @@ scraper = "0.16"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 strsim = "0.10"
+time = "0.3"
 tokio = { version = "1.0", features = ["full"] }
 toml = "0.7"
