--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
+# Rust
 config
 target
+
+# Next.js
+node_modules
+.pnp
+.pnp.js
+coverage
+.next
+out
+build
+.DS_Store
+*.pem
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.env*.local
+.vercel
+*.tsbuildinfo
+next-env.d.ts
