--- a/aggregator/Cargo.toml
+++ b/aggregator/Cargo.toml
@@ -9,12 +9,11 @@ edition = "2021"
 async-trait = "0.1"
 bson = "2.6"
 clap = { version = "4.2", features = ["derive"] }
-crossbeam = "0.8"
-crossbeam-channel = "0.5"
 fantoccini = "0.19"
 futures = "0.3"
 graphql_client = "0.12"
 mongodb = "2.5"
+rayon = "1.7"
 redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
 regex = "1.8"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
