--- a/aggregator/Cargo.toml
+++ b/aggregator/Cargo.toml
@@ -14,9 +14,12 @@ futures = "0.3"
 graphql_client = "0.12"
 mongodb = "2.5"
 rayon = "1.7"
-redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
+redis = { version = "0.23", features = ["tokio-comp"] }
 regex = "1.8"
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.11", default-features = false, features = [
+    "json",
+    "rustls-tls",
+] }
 scraper = "0.16"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
