--- a/aggregator/Cargo.toml
+++ b/aggregator/Cargo.toml
@@ -23,7 +23,8 @@ reqwest = { version = "0.11", default-features = false, features = [
 scraper = "0.16"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde-xml-rs = "0.6"
 strsim = "0.10"
-time = "0.3"
+time = { version = "0.3", features = ["serde"] }
 tokio = { version = "1.0", features = ["full"] }
 toml = "0.7"
